@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2006-2021 Talend Inc. - www.talend.com
+ * Copyright (C) 2006-2022 Talend Inc. - www.talend.com
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -32,8 +32,9 @@ public class Defaults {
 
     static {
         final String version = System.getProperty("java.version", "1.8");
-        final Constructor<MethodHandles.Lookup> constructor = findLookupConstructor();
-        if (version.startsWith("1.8.") || version.startsWith("8.")) { // j8
+        final Boolean isJava8 = version.startsWith("1.8.") || version.startsWith("8.");
+        final Constructor<MethodHandles.Lookup> constructor = findLookupConstructor(isJava8);
+        if (isJava8) { // j8
             HANDLER = (clazz, method, proxy, args) -> constructor
                     .newInstance(clazz, MethodHandles.Lookup.PRIVATE)
                     .unreflectSpecial(method, clazz)
@@ -41,9 +42,8 @@ public class Defaults {
                     .invokeWithArguments(args);
         } else { // j > 8 - can need some --add-opens, we will add a module-info later to be clean when dropping j8
             final Method privateLookup = findPrivateLookup();
-            final int mode = MethodHandles.Lookup.PRIVATE | (MethodHandles.Lookup.PACKAGE << 1 /* module */);
             HANDLER = (clazz, method, proxy, args) -> MethodHandles.Lookup.class
-                    .cast(privateLookup.invoke(null, clazz, constructor.newInstance(clazz, mode)))
+                    .cast(privateLookup.invoke(null, clazz, constructor.newInstance(clazz)))
                     .unreflectSpecial(method, clazz)
                     .bindTo(proxy)
                     .invokeWithArguments(args);
@@ -72,11 +72,16 @@ public class Defaults {
         }
     }
 
-    private static Constructor<MethodHandles.Lookup> findLookupConstructor() {
+    private static Constructor<MethodHandles.Lookup> findLookupConstructor(final Boolean isJava8) {
         try {
-            final Constructor<MethodHandles.Lookup> constructor =
-                    MethodHandles.Lookup.class.getDeclaredConstructor(Class.class, int.class);
+            Constructor<MethodHandles.Lookup> constructor;
+            if (isJava8) {
+                constructor = MethodHandles.Lookup.class.getDeclaredConstructor(Class.class, int.class);
+            } else {
+                constructor = MethodHandles.Lookup.class.getDeclaredConstructor(Class.class);
+            }
             if (!constructor.isAccessible()) {
+                // this needs the `--add-opens java.base/java.lang.invoke=ALL-UNNAMED` jvm flag when java9+.
                 constructor.setAccessible(true);
             }
             return constructor;
